src/Echo_Components_on_K8s/K8S/DeploymentsServices/echo-redis.yaml
# redis-deployment-and-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-redis
  template:
    metadata:
      labels:
        app: echo-redis
    spec:
      containers:
      - name: redis-container
        image: redis:latest #REPLACE WITH REFERENCE TO YOUR DOCKERHUB IMAGE: <USERNAME>/<REPOSITORY>:<TAG>
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: echo-redis
spec:
  selector:
    app: echo-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
