src/Echo_Components_on_K8s/K8S/DeploymentsServices/echo-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-simulator-echo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ts-simulator-echo
  template:
    metadata:
      labels:
        app: ts-simulator-echo
    spec:
      containers:
      - name: ts-simulator-echo
        image: nichollsb/ts-simulator:v0.5 #REPLACE WITH REFERENCE TO YOUR DOCKERHUB IMAGE: <USERNAME>/<REPOSITORY>:<TAG>
        workingDir: /app
---
apiVersion: v1
kind: Service
metadata:
  name: ts-simulator-echo-service
spec:
  selector:
    app: ts-simulator-echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
