src/Echo_Components_on_K8s/K8S/DeploymentsServices/hmi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hmi-ingress
spec:
  rules:
  - host: project-echo-gecko.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hmi-service 
            port:
              number: 8080
